--- a/views/approval_view.xml
+++ b/views/approval_view.xml
@@ -65,7 +65,7 @@
                             <field name="job_request_ids" domain="[('id', 'in', domain_job_request_ids)]" options="{'no_create': True}">
                                 <tree>
                                     <field name="name"/>
-                                    <field name="employee_id" widget="many2one_avatar_user"/>
+                                    <field name="employee_ids" widget="many2many_avatar_user"/>
                                 </tree>
                             </field>
                         </page>
