--- a/views/hr_job_view.xml
+++ b/views/hr_job_view.xml
@@ -44,7 +44,7 @@
                 <field name="code"/>
             </xpath>
             <xpath expr="//field[@name='no_of_recruitment']" position="replace">
-                <field name="employee_id"/>
+                <!-- <field name="employee_id"/> -->
             </xpath>
             <xpath expr="//field[@name='department_id']" position="after">
                 <field name="division_id"/>
@@ -53,7 +53,7 @@
         </field>
     </record>
 
-    <record id="view_job_filter_inherit_ccpp" model="ir.ui.view">
+    <!-- <record id="view_job_filter_inherit_ccpp" model="ir.ui.view">
         <field name="name">view.job.tree.inherit.ccpp</field>
         <field name="model">hr.job</field>
         <field name="inherit_id" ref="hr.view_job_filter"/>
@@ -62,6 +62,6 @@
                 <field name="employee_id"/>
             </xpath>
         </field>
-    </record>
+    </record> -->
 
 </odoo>
