--- a/views/hr_job_view.xml
+++ b/views/hr_job_view.xml
@@ -17,9 +17,9 @@
                     <field name="child_lines" widget="many2many" readonly="False" options="{'no_create': True, 'no_quick_create': True, 'no_create_edit': True}"/>
                 </page>
             </xpath>
-            <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='contract_type_id']" position="after">
+            <!-- <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='contract_type_id']" position="after">
                 <field name="employee_id" options="{'no_create': True}"/>
-            </xpath>
+            </xpath> -->
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[2]" position="replace">
             </xpath>
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='department_id']" position="after">
