--- a/views/hr_job_view.xml
+++ b/views/hr_job_view.xml
@@ -26,7 +26,7 @@
                 <field name="domain_division_ids" invisible="True"/>
                 <field name="division_id" domain="[('id','in',domain_division_ids)]" options="{'no_create': True}"/>
             </xpath>
-            <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='employee_id']" position="after">            
+            <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='contract_type_id']" position="after">            
                 <field name="parent_id" placeholder="e.g. Senior Sales Manager"/>
             </xpath>
         </field>
