[ADD] group access employee

--- a/views/ccpp_menu_replace_all.xml
+++ b/views/ccpp_menu_replace_all.xml
@@ -48,7 +48,7 @@
 
     <!-- Employees -->
     <record model="ir.ui.menu" id="hr.menu_hr_root">
-        <field name="groups_id" eval="[(6,0,[ref('base.group_system')])]"/>
+        <field name="groups_id" eval="[(6,0,[ref('base.group_system'),ref('ccpp.group_access_employee')])]"/>
     </record>
 
     <!-- Attendance -->
