--- a/views/ccpp_approve_dashboard.xml
+++ b/views/ccpp_approve_dashboard.xml
@@ -7,7 +7,7 @@
         <field name="priority" eval="1"/>
         <field name="arch" type="xml">
             <tree create="0" edit="0" delete="0"> 
-                <button type="action" name="ccpp.action_open_project_edit_form" icon="fa-folder-open-o" class="oe_highlight"/> 
+                <button type="action" name="ccpp.action_open_project_edit_form" icon="fa-folder-open-o" string=" " class="oe_highlight"/> 
                 <field name="name" string="Name" class="fw-bold"/>
                 <field name="partner_id" string="Customer"/>
                 <field name="priority_select" decoration-danger="priority_select in ['1','2']" string="Priority"/>
@@ -23,7 +23,7 @@
         <field name="priority" eval="1"/>
         <field name="arch" type="xml">
             <tree create="0" edit="0" delete="0">
-                <button type="action" name="ccpp.action_open_solution_strategy_edit_form" icon="fa-folder-open-o" class="oe_highlight"/>
+                <button type="action" name="ccpp.action_open_solution_strategy_edit_form" icon="fa-folder-open-o" string=" " class="oe_highlight"/>
                 <field name="is_solution" invisible="True"/>
                 <field name="is_strategy" invisible="True"/>
                 <field name="name" string="Name" class="fw-bold"/>
@@ -43,7 +43,7 @@
         <field name="priority" eval="1"/>
         <field name="arch" type="xml">
             <tree create="0" edit="0" delete="0">
-                <button type="action" name="ccpp.action_open_solution_strategy_edit_form" icon="fa-folder-open-o" class="oe_highlight"/>
+                <button type="action" name="ccpp.action_open_solution_strategy_edit_form" icon="fa-folder-open-o" string=" " class="oe_highlight"/>
                 <field name="is_solution" invisible="True"/>
                 <field name="is_strategy" invisible="True"/>
                 <field name="name" string="Name" class="fw-bold"/>
