--- a/views/approval_view.xml
+++ b/views/approval_view.xml
@@ -78,6 +78,7 @@
                                     <field name="sequence"/>
                                     <field name="job_approve_ids" widget="many2many_tags" options="{'no_create': True}"/>
                                     <field name="contract_type_id"/>
+                                    <field name="user_approve_id"/>
                                     <field name="user_approve_ids" widget="many2many_avatar_user"/>
                                 </tree>
                             </field>
